[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
python-telegram-bot = "^20.3"
mypy = "^1.3.0"
black = "^23.3.0"
vocode = {git = "https://github.com/vocodedev/vocode-python.git", rev = "zaptrem/turn-based-improvements", extras=["all"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
